# HepoRADAR

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  generate_500.py  heparadar_codebase.txt  main.py  new_patients.csv  pyproject.toml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: cascade.py  cohort.py  explain.py  ingest.py  patients.py  quickcheck.py  referral.py
backend/app/auth/: jwt.py  roles.py  router.py
backend/app/db/: seed.py  session.py
backend/app/db/seed_data/: patients.csv
backend/app/models/: __init__.py  cascade_event.py  lab.py  patient.py  referral.py  score.py  user.py
backend/app/schemas/: cascade.py  cohort.py  explain.py  ingest.py  patient.py  referral.py
backend/app/services/: cascade_logic.py  cohort_scan.py  etl.py  guidelines.py  llm_client.py  loinc_map.py  ml_infer.py  ranking.py  referral.py  scoring.py
backend/test/: conftest.py  test_app_startup.py  test_auth.py  test_cascade.py  test_cohort.py  test_explain.py  test_ml_infer.py  test_ranking.py  test_referral.py  test_scoring.py
data/: combined_liver.csv  conc.py
docs/: FIX_EMPTY_DB.md  HepaRadar MVP — Архитектура, дерево проекта и план 25b0a56b73b54fffaf716ad2160d0f83.md
frontend/: .env  .env.production  INTEGRATION_TASK.md  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
ml/models/: feature_order.json  greyzone_model.pkl  shap_explainer.pkl
ml/notebooks/: train_greyzone.ipynb
ml/src/: export.py
(+18 files in other folders)
