[project]
name = "hepa-radar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "shap>=0.52.0",
    "ucimlrepo>=0.0.7",
    "xgboost>=3.3.0",
]
