[project]
name = "heparadar-backend"
version = "0.1.0"
description = "HepaRadar backend — FastAPI case-finding service"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "psycopg[binary]>=3.1",
    "pandas>=2.2",
    "numpy==2.4.6",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",
    "pyjwt>=2.8",
    "python-dateutil>=2.9",
    "xgboost==3.3.0",
    "scikit-learn==1.9.0",
    "shap==0.52.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.uv]
package = false
